--- a/AbsoluteValueOfSin/AbsoluteValueOfSin/AbsoluteValueOfSin.vcxproj
+++ b/AbsoluteValueOfSin/AbsoluteValueOfSin/AbsoluteValueOfSin.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1a4ef892-7ce9-4c15-a1f5-e3dc9392d626}</ProjectGuid>
-    <RootNamespace>OddballOperators</RootNamespace>
+    <ProjectGuid>{e508b71f-e5da-438f-a525-7225be55f857}</ProjectGuid>
+    <RootNamespace>AbsoluteValueOfSin</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,8 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.c" />
-    <ClCompile Include="OddballOperators.h" />
+    <ClCompile Include="AbsOfSin.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
