--- a/Pointers And Simple Arrays/Pointers And Simple Arrays/Pointers And Simple Arrays.vcxproj
+++ b/Pointers And Simple Arrays/Pointers And Simple Arrays/Pointers And Simple Arrays.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PointerTests.c" />
+    <ClCompile Include="Swap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
