--- a/Pointers And Simple Arrays/Pointers And Simple Arrays/Pointers And Simple Arrays.vcxproj.filters
+++ b/Pointers And Simple Arrays/Pointers And Simple Arrays/Pointers And Simple Arrays.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="PointerTests.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Swap.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
